--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ a:hover {
 }
 
 #steps-container {
-    background-color: var(--bg-dark);
+    background-color: var(--bg-light);
     color: var(--fg);
     padding: 8px 24px 16px;
     margin-top: 16px;
@@ -144,13 +144,13 @@ a:hover {
 @media print, screen and (min-width: 600px) {
     #info-container {
         width: 320px;
-        float: right;
+        /*float: right;*/
         margin: 4px 0 16px 16px;
     }
 
     #ingredients-container {
         width: 320px;
-        float: right;
+        /*float: right;*/
         margin: 4px 0 16px 16px;
     }
 }
