--- a/style.css
+++ b/style.css
@@ -160,3 +160,36 @@ a:hover {
         grid-column: 1; /* left column */
     }
 }
+
+h1, h2, h3, h4, h5 {
+    color: var(--yellow);
+    font-weight: 600;
+    margin-top: 1.2em;
+    margin-bottom: 0.4em;
+}
+
+h2 {
+    color: var(--orange);
+}
+
+h3 {
+    color: var(--aqua);
+}
+
+strong, b {
+    color: var(--fg);
+}
+
+em, i {
+    color: var(--fg-dim);
+}
+
+a {
+    color: var(--aqua);
+    text-decoration: none;
+}
+
+a:hover {
+    color: var(--orange);
+    text-decoration: underline;
+}
